--- a/_sass/minimal-mistakes/_footer.scss
+++ b/_sass/minimal-mistakes/_footer.scss
@@ -24,6 +24,7 @@
     margin-top: 2em;
     max-width: 100%;
     padding: 0 1em 2em;
+    text-align: center;
 
     @include breakpoint($x-large) {
       max-width: $x-large;
